--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>My Angular App!</title>
+    <title>AHttp</title>
+    <!-- Required for Angular Routing -->
+    <base href="/">
 
     <!-- css -->
     <!-- load bootstrap and some simple css -->
